--- a/src/components/ActionsMenu/Item/ActionsMenuItem.st.css
+++ b/src/components/ActionsMenu/Item/ActionsMenuItem.st.css
@@ -19,11 +19,12 @@
 }
 
 .root {
-    -st-states: disabled;
+    -st-states: disabled, alignment(enum(left, center, right));
     height: 40px;
     padding: 8px 24px;
     display: flex;
     cursor: pointer;
+    position: relative;
 }
 
 .root:hover {
@@ -32,6 +33,21 @@
 
 .container {
     display: flex;
+    flex: 1;
+    position: absolute;
+}
+
+.root:alignment(left) .container {
+    left: 0;
+}
+
+.root:alignment(center) .container {
+    left: 50%;
+    transform: translate(-50%, 0);
+}
+
+.root:alignment(right) .container {
+    right: 0;
 }
 
 .root:disabled {
